--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -201,8 +201,8 @@ jobs:
         run: |
           cd openwrt/bin/targets/*/*
           rm -rf packages/
-          rm -rf config.buildinfo feeds.buildinfo openwrt-x86-64-generic.manifest openwrt-x86-64-generic-kernel.bin
-          rm -rf profiles.json sha256sums version.buildinfo openwrt-x86-64-generic-squashfs-rootfs.img.gz
+          rm -rf config.buildinfo feeds.buildinfo immortalwrt-x86-64-generic.manifest immortalwrt-x86-64-generic-kernel.bin
+          rm -rf profiles.json sha256sums version.buildinfo immortalwrt-x86-64-generic-squashfs-rootfs.img.gz
           echo "FIRMWARE=$PWD" >> $GITHUB_ENV
           echo "status=success" >> $GITHUB_OUTPUT
 
